[package]
name = "balanced-edges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
petgraph = "0.6.2"
rayon = "1.5.3"
indicatif = { version = "0.16.2", features = ["rayon"] }
rand = "0.8.5"
structopt = "0.3.26"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
